[gd_scene load_steps=38 format=2]

[ext_resource path="res://enemies/moving/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" type="Texture" id=3]
[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Death.png" type="Texture" id=4]
[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Walk.png" type="Texture" id=5]
[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Attack.png" type="Texture" id=6]
[ext_resource path="res://sounds/skeleton-death.mp3" type="AudioStream" id=7]
[ext_resource path="res://sounds/skeleton-sword.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 15, 24.25 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 3.75
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 15, 23.8906 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 12.5938, 7 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 12.5, 6.96875 )

[node name="Skeleton" type="KinematicBody2D" groups=["enemies"]]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
move_speed = 200

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 5.75 )
shape = SubResource( 29 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3.5, 3 )
frames = SubResource( 25 )
animation = "Death"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemies"]]
position = Vector2( 1, 5.39065 )
z_as_relative = false
shape = SubResource( 26 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 27.5, 0 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 28.5, 2 )
shape = SubResource( 27 )

[node name="AttackDetector" type="Area2D" parent="." groups=["enemieAttack"]]
position = Vector2( 30.5, 17.5 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -1, -15.5 )
shape = SubResource( 28 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="OffTimer" type="Timer" parent="."]
wait_time = 1.03

[node name="AttackDetector2" type="Area2D" parent="."]
position = Vector2( 7.5, 17.5 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector2"]
position = Vector2( 22, -15.5 )
shape = SubResource( 28 )

[node name="Sounds" type="Node" parent="."]

[node name="attack" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )

[node name="death" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )

[node name="SkeletonEyes" type="RayCast2D" parent="."]
position = Vector2( 16.5, -15 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="SkeletonFeet" type="RayCast2D" parent="."]
position = Vector2( 16.5, 20.5 )
enabled = true
cast_to = Vector2( 2, 0 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
[connection signal="area_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_area_exited"]
[connection signal="area_entered" from="AttackDetector" to="." method="_on_AttackDetector_area_entered"]
[connection signal="area_exited" from="AttackDetector" to="." method="_on_AttackDetector_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_OffTimer_timeout"]
[connection signal="area_entered" from="AttackDetector2" to="." method="_on_AttackDetector2_area_entered"]
[connection signal="area_exited" from="AttackDetector2" to="." method="_on_AttackDetector2_area_exited"]
